# rs-slack-status-toggle

./: Cargo.toml
src/: main.rs
