[package]
name = "slack-status-toggle"
version = "0.1.0"
authors = ["swapsCAPS <verstegen.daan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = [ "json", "blocking" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
